--- a/tasks/task4/R/simtest-lbspr.Rmd
+++ b/tasks/task4/R/simtest-lbspr.Rmd
@@ -148,7 +148,7 @@ save(lb,file="/home/laurence/Desktop/tmp/lb.RData")
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for turbot. 
 
@@ -156,7 +156,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for turbot. 
 
@@ -199,7 +199,7 @@ lb=lbspr(lfd,prior)
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for brill. 
 
@@ -207,7 +207,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for brill. 
 
@@ -248,7 +248,7 @@ lb=lbspr(lfd,prior)
 ```{r, ray-spr}
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for ray. 
 
@@ -257,7 +257,7 @@ ggplot(ddply(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")),.(iter),
              transform, val=value/mean(value)))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for ray. 
 
@@ -298,7 +298,7 @@ lb=lbspr(lfd,prior)
 ```{r, sprat-spr}
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for pollack. 
 
@@ -306,7 +306,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for pollack. 
 
@@ -347,7 +347,7 @@ lb=lbspr(lfd,prior)
 ```{r, pollack-spr}
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for pollack. 
 
@@ -355,7 +355,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for pollack. 
 
@@ -396,7 +396,7 @@ lb=lbspr(lfd,prior)
 ```{r, razor-spr}
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
-  xlab("SPR")+ylab("Year")+theme_bw()
+  ylab("SPR")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for razors. 
 
@@ -405,7 +405,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for razors. 
 
@@ -447,7 +447,7 @@ lb=lbspr(lfd,prior)
 ```{r, lobster-spr}
 ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+   
   geom_boxplot(aes(ac(year),value))+
-  xlab("SPR")+ylab("Year")+theme_bw()  
+  ylab("SPR")+xlab("Year")+theme_bw()  
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of SPR for lobster. 
 
@@ -455,7 +455,7 @@ ggplot(melt(sweep(lb["SPR"],c(1,3),lb["SPR","40"],"/")))+
 ggplot(melt(sweep(lb["FM"],c(1,3),lb["FM","40"],"/")))+  
   geom_boxplot(aes(ac(year),value))+
   scale_x_discrete(breaks=seq(20,60,10))+
-  xlab("F")+ylab("Year")+theme_bw()
+  ylab("F")+xlab("Year")+theme_bw()
 ```
 **Figure `r iFig=iFig+1; iFig`** Estimates of $F/M$ for lobster. 
 
